~156
>>> #marks3.py
>>> marks=[90,25,67,45,80]
>>> for number in range(len(marks)):
...     if marks[number]< 60: continue
...     print("%d번 학생 축하합니다. 합격입니다." %(number+1))
...
1번 학생 축하합니다. 합격입니다.
3번 학생 축하합니다. 합격입니다.
5번 학생 축하합니다. 합격입니다.
>>> add=0
>>> for i in range(1,101):
...     add=add+i
...
>>> print(add)
5050
>>> 18기‘22.04.25 ~ ‘22.07.1512주'22.03.20 ~ '22.04.03'22.04.07'22.04.11 ~ 04.12
  File "<stdin>", line 1
    18기‘22.04.25 ~ ‘22.07.1512주'22.03.20 ~ '22.04.03'22.04.07'22.04.11 ~ 04.12
       ^
SyntaxError: invalid character '‘' (U+2018)
>>> for i in range(2,10)
  File "<stdin>", line 1
    for i in range(2,10)
                        ^
SyntaxError: invalid syntax
>>> for i in range(2,10):
...     for j in  range(1,10):
...             print(i*j,end=" ")
...     print('')
...
2 4 6 8 10 12 14 16 18
3 6 9 12 15 18 21 24 27
4 8 12 16 20 24 28 32 36
5 10 15 20 25 30 35 40 45
6 12 18 24 30 36 42 48 54
7 14 21 28 35 42 49 56 63
8 16 24 32 40 48 56 64 72
9 18 27 36 45 54 63 72 81
>>> #list comprehension
>>> #리스트 내포 (list comprehension)
>>> a=[1,2,3,4]
>>> result=[ ]
>>> for num in a:
...     result.append(num*3)
...
>>> print(result)
[3, 6, 9, 12]
>>> a=[1,2,3,4]
>>> result=[num*3 for num in a]
>>> print(result)
[3, 6, 9, 12]
>>> result=[num*3 for num in a if num%2==0]
>>> print(result)
[6, 12]
>>> result=[x*y for x in range(2,10)
...     for y in range
...
...
...
... }
  File "<stdin>", line 6
    }
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '[' on line 1
>>>
>>> result=0
>>> i=1
>>> while i <= 1000:
...     if i%3==0
  File "<stdin>", line 2
    if i%3==0
             ^
SyntaxError: invalid syntax
>>> 1hile i<= 1000:
  File "<stdin>", line 1
    1hile i<= 1000:
     ^
SyntaxError: invalid syntax
>>> while i<= 1000:
...     if i%3==0:
...             result +=i
...     i +=1
... print(result)
  File "<stdin>", line 5
    print(result)
    ^
SyntaxError: invalid syntax
>>> print(result)
0
>>> reault=0
>>> i=1
>>> while i<=1000:
...     if i%3==0
  File "<stdin>", line 2
    if i%3==0
             ^
SyntaxError: invalid syntax
>>> while i=1000:
  File "<stdin>", line 1
    while i=1000:
           ^
SyntaxError: invalid syntax
>>> while i<=1000:
...     if i%3 == 0:
...             result+=i
...     i+=1
...
>>> print(result)
166833
>>> i=0
>>> while True:
...     i+=1
...     if i>5: break
...     print('*'*i)
...
*
**
***
****
*****
>>> for i in range(1,101)
  File "<stdin>", line 1
    for i in range(1,101)
                         ^
SyntaxError: invalid syntax
>>> for i in range(1,101):
...     print(i)
...
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
>>> A=[70,60,55,75,95,90,80,80,85,100]
>>> total=0
>>> for score in A:
...     total+= score
... average=total/len(A)
  File "<stdin>", line 3
    average=total/len(A)
    ^
SyntaxError: invalid syntax
>>> for score in A:
...     total+= score
...
>>> average=total/len(A)
>>> print(average)
79.0
>>> #Q6
>>> number=[1,2,3,4,5]
>>> result=[num*2 for num in numbers if num%2==0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'numbers' is not defined
>>> result=[num*2 for num in number if num%2==0]
>>> print(result)
[4, 8]
>>> result=[num*2 for num in number if num%2==1]
>>> print(result)
[2, 6, 10]
>>> def say():
...     return 'HI'
...
>>> a=say()
>>> print(a)
HI
